modified the links to avoid overlapping

--- a/app.css
+++ b/app.css
@@ -158,7 +158,7 @@ div.popover.variables div.popover-content.form-horizontal .form-group {
 }
 #rightpanel #rightContentArea div {display:none;}
 #rightpanel #rightContentArea div.active {display:block;}
-#rightpanel.expandpanel {width:40%;}
+#rightpanel.expandpanel {width:80%;}
 #rightpanel.closepanel {width:1px;}
 #rightpanel.closepanel #rightpaneltitle, #rightpanel.closepanel div.btn-group-justified, #rightpanel.closepanel div.row-fluid.closepanel {display:none;}
 
